<resources>
    <string name="app_name">Tama Yankees</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="quickstart_message">Tama Yankees</string>
    <string name="homepage">Homepage</string>
    <string name="pref_title_credential">Login to TY Homepage</string>
    <string name="pref_summary_id">ID for login</string>
    <string name="pref_summary_pass">Password for login</string>
    <string name="pref_title_id">ID</string>
    <string name="pref_title_pass">Password</string>
    <string name="pref_key_id">mid</string>
    <string name="pref_key_pass">mpass</string>

    <string name="pref_title_notification">Receiving Notification</string>
    <string name="pref_title_schedule">Schedule</string>
    <string name="pref_summary_notif_schedule">Receive schedule notification</string>
    <string name="pref_title_board">Board</string>
    <string name="pref_summary_notif_board">Receive board notification</string>
    <string name="pref_title_scorebook">Scorebook</string>
    <string name="pref_summary_notif_scorebook">Receive scorebook notification</string>
    <string name="setting_label">Settings</string>
    <string name="app_page_label">Application Page</string>
    <string name="app_manual_label">Manual</string>
    <string name="version_info_label">Version</string>
    <string name="information">Information</string>
    <string name="new_app_version_message">App has been updated</string>
    <string name="id_pass_setting_message">The notified page will be open if you set user ID and password at setting.</string>
    <string name="id_pass_setting_message2">Page will open with authentified status if you set user ID and password at setting.</string>
    <string name="pref_title_personal_record">Personal Record</string>
    <string name="pref_title_ui">User Interface</string>
    <string name="pref_background_default">ty_back</string>
    <string name="pref_title_background">Background</string>

</resources>
